# gtbserver

./: .gitignore  LICENSING  Makefile  Makefile.am  NOTES  README  TODO  a.out  comm.c  comm.h  compile.sh  configure.ac  gtbcommunication.cc  gtbcommunication.hh  gtbcommunication.hpp  gtbconnection.cc  gtbconnection.hh  gtbserver.c  gtbserver.h  mysqlconn.c  mysqlconn.h  mysqlconn.hpp  patron.pb-c.c  patron.pb-c.h  patron.proto  request.proto  setDB.c  setDB.h  sqlconn.cc  sqlconn.hpp
COPYING/: COPYING.GNUTLS  COPYING.GNUTLS-E  COPYING.MYSQLCONN
docs/: gtbdoxygen.conf
docs/html/: annotated.html  classBadConnectionException-members.html  classBadConnectionException.html  classGTBCommunication-members.html  classGTBCommunication.html  classMySQLConn-members.html  classMySQLConn.html  classPatronException-members.html  classPatronException.html  classPatronInfo-members.html  classPatronInfo.html  classPatronList-members.html  classPatronList.html  classRequest-members.html  classRequest.html  classResponse-members.html  classResponse.html  classes.html  communication_8pb_8cc.html  communication_8pb_8cc_source.html  communication_8pb_8h.html  communication_8pb_8h_source.html  cred_8h.html  cred_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6b.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  (+75 more)
docs/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_70.js  all_72.js  all_73.js  all_74.js  classes_62.js  classes_63.js  classes_67.js  classes_6d.js  classes_70.js  classes_73.js  defines_61.js  defines_62.js  defines_63.js  defines_64.js  defines_67.js  defines_68.js  defines_69.js  defines_6c.js  defines_6d.js  defines_70.js  defines_72.js  defines_73.js  defines_74.js  defines_75.js  files_63.js  files_67.js  files_70.js  files_73.js  (+26 more)
docs/latex/: annotated.tex  classBadConnectionException.tex  classGTBCommunication.tex  classMySQLConn.tex  classPatronException.tex  classPatronInfo.tex  classPatronList.tex  classRequest.tex  classResponse.tex  communication_8pb_8cc.tex  communication_8pb_8h.tex  cred_8h.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  doxygen.sty  files.tex  gtbclient_8h.tex  gtbcommunication_8cc.tex  gtbcommunication_8hpp.tex  gtbexceptions_8hpp.tex  gtbserver_8cc.tex  gtbserver_8hpp.tex  main_8cc.tex  mysqlconn_8hpp.tex  namespacegoogle.tex  namespacegoogle_1_1protobuf.tex  namespaces.tex  patron_8pb_8cc.tex  patron_8pb_8h.tex  refman.tex  setDB_8h.tex  sqlconn_8cc.tex  sqlconn_8hpp.tex  structCACHE.tex  structStaticDescriptorInitializer__communication__2eproto.tex  structStaticDescriptorInitializer__patron__2eproto.tex  structmyinit.tex  tlsnet_8h.tex  todo.tex
include/: communication.pb.h  gtbclient.hpp  gtbcommunication.hpp  gtbexceptions.hpp  gtbserver.h  gtbserver.hpp  patron.pb.h  sqlconn.hpp  threading.hpp
patch/: makefile-ubuntu.patch
src/: communication.pb.cc  communication.proto  gtbcommunication.cc  gtbserver.c  gtbserver.cc  main.cc  mysqlconn.c  patron.pb.cc  patron.proto  sqlconn.cc  threading.cc
test/: externalfunctions.cc  externalfunctions.hpp  gpgjsontest.cc  gtb-test-comm.cc  gtb-test-curr.cc  gtb-test-main.cc  gtbcommunicationtest.cc  gtbcommunicationtest.hpp
